fix truncated tiles

--- a/mods/graffiti/web/css/main.css
+++ b/mods/graffiti/web/css/main.css
@@ -11,7 +11,7 @@ body, html {
   position: absolute;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  border: 1px solid #cccccc;
+  outline: 1px solid #cccccc;
   overflow: hidden;
 }
 
